fix: hide Remote on mobile version

--- a/src/components/ResumeGroupItem/style.css
+++ b/src/components/ResumeGroupItem/style.css
@@ -129,3 +129,9 @@
     font-size: 16px;
   }
 }
+
+@media (max-width: 480px) {
+  .resume-group-item__remote {
+    display: none;
+  }
+}
